src/test/ui/consts/const_unsafe_unreachable_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/hint.rs:LL:COL
   |
   = note: entering unreachable code
   |
note: inside `unreachable_unchecked`
  --> $SRC_DIR/core/src/hint.rs:LL:COL
note: inside `foo`
  --> $DIR/const_unsafe_unreachable_ub.rs:6:18
   |
LL |         false => std::hint::unreachable_unchecked(),
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `BAR`
  --> $DIR/const_unsafe_unreachable_ub.rs:10:28
   |
LL | const BAR: bool = unsafe { foo(false) };
   |                            ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
